Integration of implementation of vector index.